add_library(GameEngine STATIC
    source/Console/Console.cpp
    source/Console/Cvar.cpp
    source/Console/CvarManager.cpp
    source/Console/ConsoleCommandManager.cpp
    Source/Common/Audio/AudioEventRTS.cpp
    Source/Common/Audio/AudioRequest.cpp
    Source/Common/Audio/GameAudio.cpp
    Source/Common/Audio/GameMusic.cpp
    Source/Common/Audio/GameSounds.cpp
    Source/Common/Bezier/BezFwdIterator.cpp
    Source/Common/Bezier/BezierSegment.cpp
    Source/Common/BitFlags.cpp
    Source/Common/CommandLine.cpp
    Source/Common/crc.cpp
    Source/Common/CRCDebug.cpp
    Source/Common/DamageFX.cpp
    Source/Common/Dict.cpp
    Source/Common/DiscreteCircle.cpp
    Source/Common/GameEngine.cpp
    Source/Common/GameLOD.cpp
    Source/Common/GameMain.cpp
    Source/Common/GlobalData.cpp
    Source/Common/INI/INI.cpp
    Source/Common/INI/INIAiData.cpp
    Source/Common/INI/INIAnimation.cpp
    Source/Common/INI/INIAudioEventInfo.cpp
    Source/Common/INI/INICommandButton.cpp
    Source/Common/INI/INICommandSet.cpp
    Source/Common/INI/INIControlBarScheme.cpp
    Source/Common/INI/INICrate.cpp
    Source/Common/INI/INIDamageFX.cpp
    Source/Common/INI/INIDrawGroupInfo.cpp
    Source/Common/INI/INIGameData.cpp
    Source/Common/INI/INIMapCache.cpp
    Source/Common/INI/INIMapData.cpp
    Source/Common/INI/INIMappedImage.cpp
    Source/Common/INI/INIMiscAudio.cpp
    Source/Common/INI/INIModel.cpp
    Source/Common/INI/INIMultiplayer.cpp
    Source/Common/INI/INIObject.cpp
    Source/Common/INI/INIParticleSys.cpp
    Source/Common/INI/INISpecialPower.cpp
    Source/Common/INI/INITerrain.cpp
    Source/Common/INI/INITerrainBridge.cpp
    Source/Common/INI/INITerrainRoad.cpp
    Source/Common/INI/INIUpgrade.cpp
    Source/Common/INI/INIVideo.cpp
    Source/Common/INI/INIWater.cpp
    Source/Common/INI/INIWeapon.cpp
    Source/Common/INI/INIWebpageURL.cpp
    Source/Common/Language.cpp
    Source/Common/MessageStream.cpp
    Source/Common/MiniLog.cpp
    Source/Common/MultiplayerSettings.cpp
    Source/Common/NameKeyGenerator.cpp
    Source/Common/PartitionSolver.cpp
    Source/Common/PerfTimer.cpp
    Source/Common/RandomValue.cpp
    Source/Common/Recorder.cpp
    Source/Common/RTS/ActionManager.cpp
    Source/Common/RTS/Energy.cpp
    Source/Common/RTS/Handicap.cpp
    Source/Common/RTS/MissionStats.cpp
    Source/Common/RTS/Money.cpp
    Source/Common/RTS/Player.cpp
    Source/Common/RTS/PlayerList.cpp
    Source/Common/RTS/PlayerTemplate.cpp
    Source/Common/RTS/ProductionPrerequisite.cpp
    Source/Common/RTS/ResourceGatheringManager.cpp
    Source/Common/RTS/Science.cpp
    Source/Common/RTS/ScoreKeeper.cpp
    Source/Common/RTS/SpecialPower.cpp
    Source/Common/RTS/Team.cpp
    Source/Common/RTS/TunnelTracker.cpp
    Source/Common/SkirmishBattleHonors.cpp
    Source/Common/StateMachine.cpp
    Source/Common/StatsCollector.cpp
    Source/Common/System/ArchiveFile.cpp
    Source/Common/System/ArchiveFileSystem.cpp
    Source/Common/System/AsciiString.cpp
    Source/Common/System/BuildAssistant.cpp
    Source/Common/System/CDManager.cpp
    Source/Common/System/Compression.cpp
    Source/Common/System/CopyProtection.cpp
    Source/Common/System/CriticalSection.cpp
    Source/Common/System/DataChunk.cpp
    Source/Common/System/Debug.cpp
    Source/Common/System/Directory.cpp
    Source/Common/System/DisabledTypes.cpp
    Source/Common/System/encrypt.cpp
    Source/Common/System/File.cpp
    Source/Common/System/FileSystem.cpp
    Source/Common/System/FunctionLexicon.cpp
    Source/Common/System/GameCommon.cpp
    Source/Common/System/GameMemory.cpp
    Source/Common/System/GameType.cpp
    Source/Common/System/Geometry.cpp
    Source/Common/System/KindOf.cpp
    Source/Common/System/List.cpp
    Source/Common/System/LocalFile.cpp
    Source/Common/System/LocalFileSystem.cpp
    Source/Common/System/MemoryInit.cpp
    Source/Common/System/QuickTrig.cpp
    Source/Common/System/QuotedPrintable.cpp
    Source/Common/System/Radar.cpp
    Source/Common/System/RAMFile.cpp
    Source/Common/System/registry.cpp
    Source/Common/System/SaveGame/GameState.cpp
    Source/Common/System/SaveGame/GameStateMap.cpp
    Source/Common/System/Snapshot.cpp
    Source/Common/System/StackDump.cpp
    Source/Common/System/StreamingArchiveFile.cpp
    Source/Common/System/String.cpp
    Source/Common/System/SubsystemInterface.cpp
    Source/Common/System/Trig.cpp
    Source/Common/System/UnicodeString.cpp
    Source/Common/System/Upgrade.cpp
    Source/Common/System/Xfer.cpp
    Source/Common/System/XferCRC.cpp
    Source/Common/System/XferLoad.cpp
    Source/Common/System/XferSave.cpp
    Source/Common/TerrainTypes.cpp
    Source/Common/Thing/DrawModule.cpp
    Source/Common/Thing/Module.cpp
    Source/Common/Thing/ModuleFactory.cpp
    Source/Common/Thing/Thing.cpp
    Source/Common/Thing/ThingFactory.cpp
    Source/Common/Thing/ThingTemplate.cpp
    Source/Common/UserPreferences.cpp
    Source/Common/version.cpp
    Source/GameClient/Color.cpp
    Source/GameClient/Credits.cpp
    Source/GameClient/Display.cpp
    Source/GameClient/DisplayString.cpp
    Source/GameClient/DisplayStringManager.cpp
    Source/GameClient/Drawable.cpp
    Source/GameClient/Drawable/DrawableManager.cpp
    Source/GameClient/Drawable/Update/AnimatedParticleSysBoneClientUpdate.cpp
    Source/GameClient/Drawable/Update/BeaconClientUpdate.cpp
    Source/GameClient/Drawable/Update/SwayClientUpdate.cpp
    Source/GameClient/DrawGroupInfo.cpp
    Source/GameClient/Eva.cpp
    Source/GameClient/FXList.cpp
    Source/GameClient/GameClient.cpp
    Source/GameClient/GameClientDispatch.cpp
    Source/GameClient/GameText.cpp
    Source/GameClient/GlobalLanguage.cpp
    Source/GameClient/GraphDraw.cpp
    Source/GameClient/GUI/AnimateWindowManager.cpp
    Source/GameClient/GUI/ControlBar/ControlBar.cpp
    Source/GameClient/GUI/ControlBar/ControlBarBeacon.cpp
    Source/GameClient/GUI/ControlBar/ControlBarCommand.cpp
    Source/GameClient/GUI/ControlBar/ControlBarCommandProcessing.cpp
    Source/GameClient/GUI/ControlBar/ControlBarMultiSelect.cpp
    Source/GameClient/GUI/ControlBar/ControlBarObserver.cpp
    Source/GameClient/GUI/ControlBar/ControlBarOCLTimer.cpp
    Source/GameClient/GUI/ControlBar/ControlBarPrintPositions.cpp
    Source/GameClient/GUI/ControlBar/ControlBarResizer.cpp
    Source/GameClient/GUI/ControlBar/ControlBarScheme.cpp
    Source/GameClient/GUI/ControlBar/ControlBarStructureInventory.cpp
    Source/GameClient/GUI/ControlBar/ControlBarUnderConstruction.cpp
    Source/GameClient/GUI/DisconnectMenu/DisconnectMenu.cpp
    Source/GameClient/GUI/EstablishConnectionsMenu/EstablishConnectionsMenu.cpp
    Source/GameClient/GUI/Gadget/GadgetCheckBox.cpp
    Source/GameClient/GUI/Gadget/GadgetComboBox.cpp
    Source/GameClient/GUI/Gadget/GadgetHorizontalSlider.cpp
    Source/GameClient/GUI/Gadget/GadgetListBox.cpp
    Source/GameClient/GUI/Gadget/GadgetProgressBar.cpp
    Source/GameClient/GUI/Gadget/GadgetPushButton.cpp
    Source/GameClient/GUI/Gadget/GadgetRadioButton.cpp
    Source/GameClient/GUI/Gadget/GadgetStaticText.cpp
    Source/GameClient/GUI/Gadget/GadgetTabControl.cpp
    Source/GameClient/GUI/Gadget/GadgetTextEntry.cpp
    Source/GameClient/GUI/Gadget/GadgetVerticalSlider.cpp
    Source/GameClient/GUI/GameFont.cpp
    Source/GameClient/GUI/GameWindow.cpp
    Source/GameClient/GUI/GameWindowGlobal.cpp
    Source/GameClient/GUI/GameWindowManager.cpp
    Source/GameClient/GUI/GameWindowManagerScript.cpp
    Source/GameClient/GUI/GameWindowTransitions.cpp
    Source/GameClient/GUI/GameWindowTransitionsStyles.cpp
    Source/GameClient/GUI/GUICallbacks/ControlBarCallback.cpp
    Source/GameClient/GUI/GUICallbacks/ControlBarPopupDescription.cpp
    Source/GameClient/GUI/GUICallbacks/Diplomacy.cpp
    Source/GameClient/GUI/GUICallbacks/ExtendedMessageBox.cpp
    Source/GameClient/GUI/GUICallbacks/GeneralsExpPoints.cpp
    Source/GameClient/GUI/GUICallbacks/IMECandidate.cpp
    Source/GameClient/GUI/GUICallbacks/InGameChat.cpp
    Source/GameClient/GUI/GUICallbacks/InGamePopupMessage.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/CreditsMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/DifficultySelect.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/DisconnectWindow.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/DownloadMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/EstablishConnectionsWindow.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/GameInfoWindow.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/KeyboardOptionsMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/LanGameOptionsMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/LanLobbyMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/LanMapSelectMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/MainMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/MapSelectMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/NetworkDirectConnect.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/OptionsMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/PopupCommunicator.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/PopupHostGame.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/PopupJoinGame.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/PopupLadderSelect.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/PopupPlayerInfo.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/PopupReplay.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/PopupSaveLoad.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/QuitMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/ReplayMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/ScoreScreen.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/SinglePlayerMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/SkirmishGameOptionsMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/SkirmishMapSelectMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/WOLBuddyOverlay.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/WOLCustomScoreScreen.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/WOLGameSetupMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/WOLLadderScreen.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/WOLLobbyMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/WOLLocaleSelectPopup.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/WOLLoginMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/WOLMapSelectMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/WOLMessageWindow.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/WOLQMScoreScreen.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/WOLQuickMatchMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/WOLStatusMenu.cpp
    Source/GameClient/GUI/GUICallbacks/Menus/WOLWelcomeMenu.cpp
    Source/GameClient/GUI/GUICallbacks/MessageBox.cpp
    Source/GameClient/GUI/GUICallbacks/ReplayControls.cpp
    Source/GameClient/GUI/HeaderTemplate.cpp
    Source/GameClient/GUI/IMEManager.cpp
    Source/GameClient/GUI/LoadScreen.cpp
    Source/GameClient/GUI/ProcessAnimateWindow.cpp
    Source/GameClient/GUI/Shell/Shell.cpp
    Source/GameClient/GUI/Shell/ShellMenuScheme.cpp
    Source/GameClient/GUI/WindowLayout.cpp
    Source/GameClient/GUI/WindowVideoManager.cpp
    Source/GameClient/GUI/WinInstanceData.cpp
    Source/GameClient/InGameUI.cpp
    Source/GameClient/Input/Keyboard.cpp
    Source/GameClient/Input/Mouse.cpp
    Source/GameClient/LanguageFilter.cpp
    Source/GameClient/Line2D.cpp
    Source/GameClient/MapUtil.cpp
    Source/GameClient/MessageStream/CommandXlat.cpp
    Source/GameClient/MessageStream/GUICommandTranslator.cpp
    Source/GameClient/MessageStream/HintSpy.cpp
    Source/GameClient/MessageStream/HotKey.cpp
    Source/GameClient/MessageStream/LookAtXlat.cpp
    Source/GameClient/MessageStream/MetaEvent.cpp
    Source/GameClient/MessageStream/PlaceEventTranslator.cpp
    Source/GameClient/MessageStream/SelectionXlat.cpp
    Source/GameClient/MessageStream/WindowXlat.cpp
    Source/GameClient/RadiusDecal.cpp
    Source/GameClient/SelectionInfo.cpp
    Source/GameClient/Statistics.cpp
    Source/GameClient/System/Anim2D.cpp
    Source/GameClient/System/CampaignManager.cpp
    "Source/GameClient/System/Debug Displayers/AudioDebugDisplay.cpp"
    Source/GameClient/System/DebugDisplay.cpp
    Source/GameClient/System/Image.cpp
    Source/GameClient/System/ParticleSys.cpp
    Source/GameClient/System/RayEffect.cpp
    Source/GameClient/Terrain/TerrainRoads.cpp
    Source/GameClient/Terrain/TerrainVisual.cpp
    Source/GameClient/VideoPlayer.cpp
    Source/GameClient/View.cpp
    Source/GameClient/Water.cpp
    Source/GameLogic/AI/AI.cpp
    Source/GameLogic/AI/AIDock.cpp
    Source/GameLogic/AI/AIGroup.cpp
    Source/GameLogic/AI/AIGuard.cpp
    Source/GameLogic/AI/AIPathfind.cpp
    Source/GameLogic/AI/AIPlayer.cpp
    Source/GameLogic/AI/AISkirmishPlayer.cpp
    Source/GameLogic/AI/AIStates.cpp
    Source/GameLogic/AI/AITNGuard.cpp
    Source/GameLogic/AI/Squad.cpp
    Source/GameLogic/AI/TurretAI.cpp
    Source/GameLogic/Map/PolygonTrigger.cpp
    Source/GameLogic/Map/SidesList.cpp
    Source/GameLogic/Map/TerrainLogic.cpp
    Source/GameLogic/Object/Armor.cpp
    Source/GameLogic/Object/Behavior/AutoHealBehavior.cpp
    Source/GameLogic/Object/Behavior/BehaviorModule.cpp
    Source/GameLogic/Object/Behavior/BridgeBehavior.cpp
    Source/GameLogic/Object/Behavior/BridgeScaffoldBehavior.cpp
    Source/GameLogic/Object/Behavior/BridgeTowerBehavior.cpp
    Source/GameLogic/Object/Behavior/DumbProjectileBehavior.cpp
    Source/GameLogic/Object/Behavior/FireWeaponWhenDamagedBehavior.cpp
    Source/GameLogic/Object/Behavior/FireWeaponWhenDeadBehavior.cpp
    Source/GameLogic/Object/Behavior/GenerateMinefieldBehavior.cpp
    Source/GameLogic/Object/Behavior/InstantDeathBehavior.cpp
    Source/GameLogic/Object/Behavior/JetSlowDeathBehavior.cpp
    Source/GameLogic/Object/Behavior/MinefieldBehavior.cpp
    Source/GameLogic/Object/Behavior/OverchargeBehavior.cpp
    Source/GameLogic/Object/Behavior/ParkingPlaceBehavior.cpp
    Source/GameLogic/Object/Behavior/PoisonedBehavior.cpp
    Source/GameLogic/Object/Behavior/POWTruckBehavior.cpp
    Source/GameLogic/Object/Behavior/PrisonBehavior.cpp
    Source/GameLogic/Object/Behavior/PropagandaCenterBehavior.cpp
    Source/GameLogic/Object/Behavior/PropagandaTowerBehavior.cpp
    Source/GameLogic/Object/Behavior/RebuildHoleBehavior.cpp
    Source/GameLogic/Object/Behavior/SlowDeathBehavior.cpp
    Source/GameLogic/Object/Behavior/SpawnBehavior.cpp
    Source/GameLogic/Object/Behavior/SupplyWarehouseCripplingBehavior.cpp
    Source/GameLogic/Object/Behavior/TechBuildingBehavior.cpp
    Source/GameLogic/Object/Body/ActiveBody.cpp
    Source/GameLogic/Object/Body/BodyModule.cpp
    Source/GameLogic/Object/Body/HighlanderBody.cpp
    Source/GameLogic/Object/Body/HiveStructureBody.cpp
    Source/GameLogic/Object/Body/ImmortalBody.cpp
    Source/GameLogic/Object/Body/InactiveBody.cpp
    Source/GameLogic/Object/Body/StructureBody.cpp
    Source/GameLogic/Object/Collide/CollideModule.cpp
    Source/GameLogic/Object/Collide/CrateCollide/ConvertToCarBombCrateCollide.cpp
    Source/GameLogic/Object/Collide/CrateCollide/ConvertToHijackedVehicleCrateCollide.cpp
    Source/GameLogic/Object/Collide/CrateCollide/CrateCollide.cpp
    Source/GameLogic/Object/Collide/CrateCollide/HealCrateCollide.cpp
    Source/GameLogic/Object/Collide/CrateCollide/MoneyCrateCollide.cpp
    Source/GameLogic/Object/Collide/CrateCollide/SalvageCrateCollide.cpp
    Source/GameLogic/Object/Collide/CrateCollide/ShroudCrateCollide.cpp
    Source/GameLogic/Object/Collide/CrateCollide/UnitCrateCollide.cpp
    Source/GameLogic/Object/Collide/CrateCollide/VeterancyCrateCollide.cpp
    Source/GameLogic/Object/Collide/FireWeaponCollide.cpp
    Source/GameLogic/Object/Collide/SquishCollide.cpp
    Source/GameLogic/Object/Contain/CaveContain.cpp
    Source/GameLogic/Object/Contain/GarrisonContain.cpp
    Source/GameLogic/Object/Contain/HealContain.cpp
    Source/GameLogic/Object/Contain/MobNexusContain.cpp
    Source/GameLogic/Object/Contain/OpenContain.cpp
    Source/GameLogic/Object/Contain/OverlordContain.cpp
    Source/GameLogic/Object/Contain/ParachuteContain.cpp
    Source/GameLogic/Object/Contain/RailedTransportContain.cpp
    Source/GameLogic/Object/Contain/TransportContain.cpp
    Source/GameLogic/Object/Contain/TunnelContain.cpp
    Source/GameLogic/Object/Create/CreateModule.cpp
    Source/GameLogic/Object/Create/GrantUpgradeCreate.cpp
    Source/GameLogic/Object/Create/PreorderCreate.cpp
    Source/GameLogic/Object/Create/SpecialPowerCreate.cpp
    Source/GameLogic/Object/Create/SupplyCenterCreate.cpp
    Source/GameLogic/Object/Create/SupplyWarehouseCreate.cpp
    Source/GameLogic/Object/Create/VeterancyGainCreate.cpp
    Source/GameLogic/Object/Damage/BoneFXDamage.cpp
    Source/GameLogic/Object/Damage/DamageModule.cpp
    Source/GameLogic/Object/Damage/TransitionDamageFX.cpp
    Source/GameLogic/Object/Destroy/DestroyModule.cpp
    Source/GameLogic/Object/Die/CreateCrateDie.cpp
    Source/GameLogic/Object/Die/CreateObjectDie.cpp
    Source/GameLogic/Object/Die/CrushDie.cpp
    Source/GameLogic/Object/Die/DamDie.cpp
    Source/GameLogic/Object/Die/DestroyDie.cpp
    Source/GameLogic/Object/Die/DieModule.cpp
    Source/GameLogic/Object/Die/EjectPilotDie.cpp
    Source/GameLogic/Object/Die/FXListDie.cpp
    Source/GameLogic/Object/Die/KeepObjectDie.cpp
    Source/GameLogic/Object/Die/RebuildHoleExposeDie.cpp
    Source/GameLogic/Object/Die/SpecialPowerCompletionDie.cpp
    Source/GameLogic/Object/Die/UpgradeDie.cpp
    Source/GameLogic/Object/ExperienceTracker.cpp
    Source/GameLogic/Object/FiringTracker.cpp
    Source/GameLogic/Object/GhostObject.cpp
    Source/GameLogic/Object/Helper/ObjectDefectionHelper.cpp
    Source/GameLogic/Object/Helper/ObjectHelper.cpp
    Source/GameLogic/Object/Helper/ObjectRepulsorHelper.cpp
    Source/GameLogic/Object/Helper/ObjectSMCHelper.cpp
    Source/GameLogic/Object/Helper/ObjectWeaponStatusHelper.cpp
    Source/GameLogic/Object/Locomotor.cpp
    Source/GameLogic/Object/Object.cpp
    Source/GameLogic/Object/ObjectCreationList.cpp
    Source/GameLogic/Object/ObjectTypes.cpp
    Source/GameLogic/Object/PartitionManager.cpp
    Source/GameLogic/Object/SimpleObjectIterator.cpp
    Source/GameLogic/Object/SpecialPower/BaikonurLaunchPower.cpp
    Source/GameLogic/Object/SpecialPower/CashBountyPower.cpp
    Source/GameLogic/Object/SpecialPower/CashHackSpecialPower.cpp
    Source/GameLogic/Object/SpecialPower/CleanupAreaPower.cpp
    Source/GameLogic/Object/SpecialPower/DefectorSpecialPower.cpp
    Source/GameLogic/Object/SpecialPower/DemoralizeSpecialPower.cpp
    Source/GameLogic/Object/SpecialPower/OCLSpecialPower.cpp
    Source/GameLogic/Object/SpecialPower/SpecialAbility.cpp
    Source/GameLogic/Object/SpecialPower/SpecialPowerModule.cpp
    Source/GameLogic/Object/SpecialPower/SpyVisionSpecialPower.cpp
    Source/GameLogic/Object/Update/AIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/AssaultTransportAIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/ChinookAIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/DeliverPayloadAIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/DeployStyleAIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/DozerAIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/HackInternetAIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/JetAIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/MissileAIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/POWTruckAIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/RailedTransportAIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/RailroadGuideAIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/SupplyTruckAIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/TransportAIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/WanderAIUpdate.cpp
    Source/GameLogic/Object/Update/AIUpdate/WorkerAIUpdate.cpp
    Source/GameLogic/Object/Update/AssistedTargetingUpdate.cpp
    Source/GameLogic/Object/Update/AutoDepositUpdate.cpp
    Source/GameLogic/Object/Update/AutoFindHealingUpdate.cpp
    Source/GameLogic/Object/Update/BaseRenerateUpdate.cpp
    Source/GameLogic/Object/Update/BattlePlanUpdate.cpp
    Source/GameLogic/Object/Update/BoneFXUpdate.cpp
    Source/GameLogic/Object/Update/CheckpointUpdate.cpp
    Source/GameLogic/Object/Update/CleanupHazardUpdate.cpp
    Source/GameLogic/Object/Update/CommandButtonHuntUpdate.cpp
    Source/GameLogic/Object/Update/DelayedWeaponSetUpgradeUpdate.cpp
    Source/GameLogic/Object/Update/DeletionUpdate.cpp
    Source/GameLogic/Object/Update/DemoTrapUpdate.cpp
    Source/GameLogic/Object/Update/DockUpdate/DockUpdate.cpp
    Source/GameLogic/Object/Update/DockUpdate/PrisonDockUpdate.cpp
    Source/GameLogic/Object/Update/DockUpdate/RailedTransportDockUpdate.cpp
    Source/GameLogic/Object/Update/DockUpdate/RepairDockUpdate.cpp
    Source/GameLogic/Object/Update/DockUpdate/SupplyCenterDockUpdate.cpp
    Source/GameLogic/Object/Update/DockUpdate/SupplyWarehouseDockUpdate.cpp
    Source/GameLogic/Object/Update/DynamicGeometryInfoUpdate.cpp
    Source/GameLogic/Object/Update/DynamicShroudClearingRangeUpdate.cpp
    Source/GameLogic/Object/Update/EMPUpdate.cpp
    Source/GameLogic/Object/Update/EnemyNearUpdate.cpp
    Source/GameLogic/Object/Update/FireOCLAfterWeaponCooldownUpdate.cpp
    Source/GameLogic/Object/Update/FireSpreadUpdate.cpp
    Source/GameLogic/Object/Update/FirestormDynamicGeometryInfoUpdate.cpp
    Source/GameLogic/Object/Update/FireWeaponUpdate.cpp
    Source/GameLogic/Object/Update/FlammableUpdate.cpp
    Source/GameLogic/Object/Update/FloatUpdate.cpp
    Source/GameLogic/Object/Update/HeightDieUpdate.cpp
    Source/GameLogic/Object/Update/HelicopterSlowDeathUpdate.cpp
    Source/GameLogic/Object/Update/HijackerUpdate.cpp
    Source/GameLogic/Object/Update/HordeUpdate.cpp
    Source/GameLogic/Object/Update/LaserUpdate.cpp
    Source/GameLogic/Object/Update/LifetimeUpdate.cpp
    Source/GameLogic/Object/Update/MissileLauncherBuildingUpdate.cpp
    Source/GameLogic/Object/Update/MobMemberSlavedUpdate.cpp
    Source/GameLogic/Object/Update/NeutronMissileSlowDeathUpdate.cpp
    Source/GameLogic/Object/Update/NeutronMissileUpdate.cpp
    Source/GameLogic/Object/Update/OCLUpdate.cpp
    Source/GameLogic/Object/Update/ParticleUplinkCannonUpdate.cpp
    Source/GameLogic/Object/Update/PhysicsUpdate.cpp
    Source/GameLogic/Object/Update/PilotFindVehicleUpdate.cpp
    Source/GameLogic/Object/Update/PointDefenseLaserUpdate.cpp
    Source/GameLogic/Object/Update/PowerPlantUpdate.cpp
    Source/GameLogic/Object/Update/ProductionExitUpdate/DefaultProductionExitUpdate.cpp
    Source/GameLogic/Object/Update/ProductionExitUpdate/QueueProductionExitUpdate.cpp
    Source/GameLogic/Object/Update/ProductionExitUpdate/SpawnPointProductionExitUpdate.cpp
    Source/GameLogic/Object/Update/ProductionExitUpdate/SupplyCenterProductionExitUpdate.cpp
    Source/GameLogic/Object/Update/ProductionUpdate.cpp
    Source/GameLogic/Object/Update/ProjectileStreamUpdate.cpp
    Source/GameLogic/Object/Update/ProneUpdate.cpp
    Source/GameLogic/Object/Update/RadarUpdate.cpp
    Source/GameLogic/Object/Update/RadiusDecalUpdate.cpp
    Source/GameLogic/Object/Update/SlavedUpdate.cpp
    Source/GameLogic/Object/Update/SpecialAbilityUpdate.cpp
    Source/GameLogic/Object/Update/SpyVisionUpdate.cpp
    Source/GameLogic/Object/Update/StealthDetectorUpdate.cpp
    Source/GameLogic/Object/Update/StealthUpdate.cpp
    Source/GameLogic/Object/Update/StickyBombUpdate.cpp
    Source/GameLogic/Object/Update/StructureCollapseUpdate.cpp
    Source/GameLogic/Object/Update/StructureToppleUpdate.cpp
    Source/GameLogic/Object/Update/TensileFormationUpdate.cpp
    Source/GameLogic/Object/Update/ToppleUpdate.cpp
    Source/GameLogic/Object/Update/UpdateModule.cpp
    Source/GameLogic/Object/Update/WaveGuideUpdate.cpp
    Source/GameLogic/Object/Upgrade/ActiveShroudUpgrade.cpp
    Source/GameLogic/Object/Upgrade/ArmorUpgrade.cpp
    Source/GameLogic/Object/Upgrade/CommandSetUpgrade.cpp
    Source/GameLogic/Object/Upgrade/CostModifierUpgrade.cpp
    Source/GameLogic/Object/Upgrade/DelayedUpgrade.cpp
    Source/GameLogic/Object/Upgrade/ExperienceScalarUpgrade.cpp
    Source/GameLogic/Object/Upgrade/LocomotorSetUpgrade.cpp
    Source/GameLogic/Object/Upgrade/MaxHealthUpgrade.cpp
    Source/GameLogic/Object/Upgrade/ObjectCreationUpgrade.cpp
    Source/GameLogic/Object/Upgrade/PowerPlantUpgrade.cpp
    Source/GameLogic/Object/Upgrade/RadarUpgrade.cpp
    Source/GameLogic/Object/Upgrade/StatusBitsUpgrade.cpp
    Source/GameLogic/Object/Upgrade/StealthUpgrade.cpp
    Source/GameLogic/Object/Upgrade/SubObjectsUpgrade.cpp
    Source/GameLogic/Object/Upgrade/UnpauseSpecialPowerUpgrade.cpp
    Source/GameLogic/Object/Upgrade/UpgradeModule.cpp
    Source/GameLogic/Object/Upgrade/WeaponBonusUpgrade.cpp
    Source/GameLogic/Object/Upgrade/WeaponSetUpgrade.cpp
    Source/GameLogic/Object/Weapon.cpp
    Source/GameLogic/Object/WeaponSet.cpp
    Source/GameLogic/ScriptEngine/ScriptActions.cpp
    Source/GameLogic/ScriptEngine/ScriptConditions.cpp
    Source/GameLogic/ScriptEngine/ScriptEngine.cpp
    Source/GameLogic/ScriptEngine/Scripts.cpp
    Source/GameLogic/ScriptEngine/VictoryConditions.cpp
    Source/GameLogic/System/CaveSystem.cpp
    Source/GameLogic/System/CrateSystem.cpp
    Source/GameLogic/System/Damage.cpp
    Source/GameLogic/System/GameLogic.cpp
    Source/GameLogic/System/GameLogicDispatch.cpp
    Source/GameLogic/System/RankInfo.cpp
    Source/GameNetwork/Connection.cpp
    Source/GameNetwork/ConnectionManager.cpp
    Source/GameNetwork/DisconnectManager.cpp
    Source/GameNetwork/DownloadManager.cpp
    Source/GameNetwork/FileTransfer.cpp
    Source/GameNetwork/FirewallHelper.cpp
    Source/GameNetwork/FrameData.cpp
    Source/GameNetwork/FrameDataManager.cpp
    Source/GameNetwork/FrameMetrics.cpp
    Source/GameNetwork/GameInfo.cpp
    Source/GameNetwork/GameMessageParser.cpp
    Source/GameNetwork/GameSpyOverlay.cpp
    Source/GameNetwork/GameSpy/Chat.cpp
    Source/GameNetwork/GameSpy/GSConfig.cpp
    Source/GameNetwork/GameSpy/LadderDefs.cpp
    Source/GameNetwork/GameSpy/LobbyUtils.cpp
    Source/GameNetwork/GameSpy/MainMenuUtils.cpp
    Source/GameNetwork/GameSpy/PeerDefs.cpp
    Source/GameNetwork/GameSpy/StagingRoomGameInfo.cpp
    Source/GameNetwork/GameSpy/Thread/BuddyThread.cpp
    Source/GameNetwork/GameSpy/Thread/GameResultsThread.cpp
    Source/GameNetwork/GameSpy/Thread/PeerThread.cpp
    Source/GameNetwork/GameSpy/Thread/PersistentStorageThread.cpp
    Source/GameNetwork/GameSpy/Thread/PingThread.cpp
    Source/GameNetwork/GameSpy/Thread/ThreadUtils.cpp
    Source/GameNetwork/GUIUtil.cpp
    Source/GameNetwork/IPEnumeration.cpp
    Source/GameNetwork/LANAPI.cpp
    Source/GameNetwork/LANAPICallbacks.cpp
    Source/GameNetwork/LANAPIhandlers.cpp
    Source/GameNetwork/LANGameInfo.cpp
    Source/GameNetwork/NAT.cpp
    Source/GameNetwork/NetCommandList.cpp
    Source/GameNetwork/NetCommandMsg.cpp
    Source/GameNetwork/NetCommandRef.cpp
    Source/GameNetwork/NetCommandWrapperList.cpp
    Source/GameNetwork/NetMessageStream.cpp
    Source/GameNetwork/NetPacket.cpp
    Source/GameNetwork/Network.cpp
    Source/GameNetwork/NetworkUtil.cpp
    Source/GameNetwork/Transport.cpp
    Source/GameNetwork/udp.cpp
    Source/GameNetwork/User.cpp
    Source/GameNetwork/WOLBrowser/WebBrowser.cpp
    Source/Precompiled/PreRTS.cpp
 "Source/Console/CvarManager.h" "Source/Console/CvarManager.cpp")

target_include_directories(GameEngine PRIVATE
    ../Libraries/Include
    ../Libraries/Source
    ../Libraries/Source/Compression
    ../Libraries/Source/GameSpy
    ../Libraries/Source/WWVegas
    ../Libraries/Source/WWVegas/WWLib
    ../Libraries/DX90SDK/Include
    Include
    Include/Precompiled
    Source/Precompiled
)

target_link_libraries(GameEngine PRIVATE
    GameEngineDevice
    GameRenderer
    wwmath
    wwlib
    WWDownload
    Compression

    UniSpySDK
)

target_compile_definitions(GameEngine PRIVATE
    ${GNG_COMPILE_DEFINITIONS}
)

target_compile_options(GameEngine PRIVATE
    ${GNG_COMPILE_OPTIONS}
)

target_link_options(GameEngine PRIVATE
    ${GNG_LINK_OPTIONS}
)

#
# 4) Precompiled header usage
#    The vcxproj uses "PrecompiledHeader=Use" for all .cpp's except for PreRTS.cpp, which sets "Create".
#    CMake’s built-in PCH feature is different from Visual Studio’s old "pch .obj" approach. If you want
#    to replicate it precisely, you'd do something like:
#
# target_precompile_headers(GameEngine PRIVATE
#   $<$<COMPILE_LANGUAGE:CXX>:PreRTS.h>
# )
#
#   By default, that will cause CMake to generate a PCH .pch for C++ sources, and automatically use it.
#   If you need the exact old-style .pch file name, there are advanced MSVC-specific properties, but
#   usually the above is sufficient for practical usage.
#
#   For truly perfect fidelity, one might have to set source properties on PreRTS.cpp so it "creates"
#   the PCH and everything else "uses" it, but the above is the simpler modern route in CMake.
#

# DO NOT TOUCH THIS, CODE RELAYS ON IT BEING LIKE THIS
set_target_properties(GameEngine PROPERTIES
    OUTPUT_NAME_DEBUG      "GameEngineDebug"
    OUTPUT_NAME_INTERNAL   "GameEngineInternal"
    OUTPUT_NAME_RELEASE    "GameEngine"
)
